--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,10 @@
   color: #61dafb;
 }
 
+.marginIcon {
+  margin-left: 500px !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
